--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,11 +13,39 @@
   );
 
 @theme {
-  --color-primary: #13df6f;
-  --color-primary-hover: #dcffec;
-  --color-disabled-bg: #d8dad9;
+  /* Main Colors */
+  --color-main1: #13df6f;
+  --color-main2: #dcffec;
+  --color-main3: #edfff5;
   --color-error: #e53060;
 
+  /* Sub Colors */
+  --color-disabled: #d8dad9;
+  --color-error: #e53060;
+
+  /* Stroke Colors */
+  --color-stroke1: #95a09a;
+  --color-stroke2: #e7ecea;
+
+  /* BackGround Colors */
+  --color-white: #ffffff;
+  --color-b1: #f7f9f8;
+  --color-b2: #f3f6f5;
+
+  /* Typography Colors */
+  --color-t1: #212221;
+  --color-t2: #616161;
+  --color-t3: #9e9e9e;
+  --color-t4: #c9cac9;
+  --color-t5: #dddddd;
+
+  /* Radius */
+  --radius-sm: 4px;
+  --radius-md: 8px;
+  --radius-lg: 10px;
+  --radius-xl: 20px;
+
+  /* Font Styles */
   --font-10b: 700
     10px/140%
     Pretendard;
@@ -131,6 +159,27 @@
   .font-26r {
     font: var(
       --font-26r
+    );
+  }
+
+  .rounded-sm {
+    border-radius: var(
+      --radius-sm
+    );
+  }
+  .rounded-md {
+    border-radius: var(
+      --radius-md
+    );
+  }
+  .rounded-lg {
+    border-radius: var(
+      --radius-lg
+    );
+  }
+  .rounded-xl {
+    border-radius: var(
+      --radius-xl
     );
   }
 }
